fix(ci): restore Hugo to PATH when loaded from cache
Problem: Hugo binary was cached in ~/hugo but not added to PATH
when restored from cache, causing 'hugo: command not found' errors.

Root cause:
- First run: Hugo installed via dpkg (system-wide)
- Subsequent runs: Cache restored to ~/hugo but not in PATH
- Only 'Install Hugo Extended' step ran on cache miss

Solution:
- Add 'Restore Hugo from Cache' step for cache hits
- Reinstall .deb from cache to restore system paths
- Ensures Hugo is always available regardless of cache state

This fixes all failing CI runs on epic/federated-build-system branch.

--- a/.github/actions/setup-build-env/action.yml
+++ b/.github/actions/setup-build-env/action.yml
@@ -57,6 +57,29 @@ runs:
           echo "/c/Hugo/bin" >> $GITHUB_PATH
         fi
 
+    - name: Restore Hugo from Cache
+      if: steps.cache-hugo.outputs.cache-hit == 'true'
+      shell: bash
+      run: |
+        # When Hugo is restored from cache, reinstall it to system paths
+        if [[ "${{ runner.os }}" == "Linux" ]]; then
+          cd ~/hugo
+          if [[ -f hugo.deb ]]; then
+            sudo dpkg -i hugo.deb
+          fi
+        elif [[ "${{ runner.os }}" == "macOS" ]]; then
+          if [[ -f ~/hugo/hugo ]]; then
+            sudo cp ~/hugo/hugo /usr/local/bin/
+            sudo chmod +x /usr/local/bin/hugo
+          fi
+        elif [[ "${{ runner.os }}" == "Windows" ]]; then
+          if [[ -f ~/hugo/hugo.exe ]]; then
+            mkdir -p /c/Hugo/bin
+            cp ~/hugo/hugo.exe /c/Hugo/bin/
+            echo "/c/Hugo/bin" >> $GITHUB_PATH
+          fi
+        fi
+
     - name: Verify Hugo Installation
       shell: bash
       run: |
