--- a/.github/workflows/bash-tests.yml
+++ b/.github/workflows/bash-tests.yml
@@ -13,6 +13,7 @@ on:
       - 'scripts/**'
       - 'tests/bash/**'
       - '.github/workflows/bash-tests.yml'
+  workflow_dispatch:
 
 env:
   HUGO_VERSION: '0.148.0'
